# tvtoday

./: Cargo.toml  README.md  tvtoday.desktop
src/: error.rs  main.rs
src/gui/: mod.rs  movie_list.rs  movie_list_item.rs  movie_page.rs  sliding_stack.rs  win.rs
src/model/: filter.rs  filter_file.rs  mod.rs  program.rs  provider.rs
src/model/providers/: mod.rs  tv_spielfilm.rs
